--- a/incidence_calculator/www/TechnicalDocumentation.Rmd
+++ b/incidence_calculator/www/TechnicalDocumentation.Rmd
@@ -2,18 +2,18 @@
 
 ## Introduction
 
-The App can be found at @@
+(The App can be found at @@)
 
 The underlying calculations use core functionality of the R package *inctools*.
 
-This app is designed to support the estimation of 
-* HIV prevalence, 
-* HIV incidence, and 
+This app is designed to support the estimation of
+* HIV prevalence,
+* HIV incidence, and
 * (crucially) Full variance/covariance of the above
 
-through analysis of cross-sectional surveillance data including biomarkers supporting classification of (HIV) cases as recently or non-recently acquired. 
+through analysis of cross-sectional surveillance data including biomarkers supporting classification of (HIV) cases as recently or non-recently acquired.
 
-While the correct use of the app and the underlying *inctools* package does not require any detailed technical knowledge about the theoretical underpinnings, an understanding of the core concepts will be useful. This overview is intended to provide technical documentation for transparency, and also to help potential users orient themselves and identify gaps for further background exploration. 
+While the correct use of the app and the underlying *inctools* package does not require any detailed technical knowledge about the theoretical underpinnings, an understanding of the core concepts will be useful. This overview is intended to provide technical documentation for transparency, and also to help potential users orient themselves and identify gaps for further background exploration.
 
 Further below, the detailed use of the app is explained with a worked example.
 
@@ -21,14 +21,14 @@ Users working to provide national level estimates as part of an interaction with
 
 ## Overview of Analytical framework (, Functionality and Use)
 
-The critical core of all the functionality of package *inctools*, and hence of @this app@ is the incidence estimator of *Kassanjee et al* (Epidemiology, 2012) and some hitherto unpublished generalisations to accomodate structured survey design, including incomplete coverage of recency ascertainment. In essence, this generalisation involves the replacement of simple survey counts, assumed in *Kassanjee et al* to be trinomially distributed, by estimated prevalences, of: 1) HIV, and 2) ‘recent infection’ amongst HIV positives (including a potential covariance, which does not arise in the trinomial distribution case). 
+The critical core of all the functionality of package *inctools*, and hence of @this app@ is the incidence estimator of *Kassanjee et al* (Epidemiology, 2012) and some hitherto unpublished generalisations to accomodate structured survey design, including incomplete coverage of recency ascertainment. In essence, this generalisation involves the replacement of simple survey counts, assumed in *Kassanjee et al* to be trinomially distributed, by estimated prevalences, of: 1) HIV, and 2) ‘recent infection’ amongst HIV positives (including a potential covariance, which does not arise in the trinomial distribution case).
 
 The theoretical basis for this approach to incidence estimation is developed in Kassanjee et al* (Epidemiology, 2012) with considerable detail and nuances spelled out. The Glossary below provides some depth on key definitions. Highlights of the conceptual framework can be captured in the following remarks:
 * There is presumed to be some test, which categorises HIV positive individuals as being ‘recent’ or ‘non recent’ cases.
 * It does not really matter, logically, how well this test performs. The analysis is valid in any case. It is just a matter of how informative the analysis is, and indeed, for real world HIV applications, it is not easy to devise a test that leads to highly precise incidence estimates at feasible sample sizes, given the values of HIV incidence realised in population level settings.
 * The test performance does not, in and of itself, lead to any exposure to *bias* in incidence estimation. However, having a mistaken view of the tests properties can lead to bias. Test performance determines incidence estimate precision. In (Kassanjee et al 2014, AIDS Research and Human Retroviruses) this point is further developed to demonstrate that test optimisation is a matter of minimising incidence estimate variance.
-* More specifically, optimisation of simple tests involves adjustment of some recent/non-recent threshold, which leads to a trade-off between the Mean Duration of Recent Infection (MDRI) and False Recent Rate (FRR) (see glossary). A larger MDRI means a greater (more precisely estimable) number of recent cases in a cross sectional survey, but this eventually comes, inevitably, at the cost of a non trivial FRR, the accounting of which leads to the growth of an additional high-variance term in the estimator. 
-* It bears pointing out that there is no *gold standard* for a test for recent infection, in anything resembling the meaning of the term that is appropriate for a discussion of usual clinical diagnostics. In particular, there is no natural, or selectable time scale for ‘recent infection’ which a recency test is then aimed at detecting. The case definition for recent infection is, then, essentially defined arbitrarily. Of course it would be nonsensical (and statistically uninformative) if the case definition were not something usually exhibited by newly infected individuals, and very rarely exhibited by people infected for substantial periods like several years. 
+* More specifically, optimisation of simple tests involves adjustment of some recent/non-recent threshold, which leads to a trade-off between the Mean Duration of Recent Infection (MDRI) and False Recent Rate (FRR) (see glossary). A larger MDRI means a greater (more precisely estimable) number of recent cases in a cross sectional survey, but this eventually comes, inevitably, at the cost of a non trivial FRR, the accounting of which leads to the growth of an additional high-variance term in the estimator.
+* It bears pointing out that there is no *gold standard* for a test for recent infection, in anything resembling the meaning of the term that is appropriate for a discussion of usual clinical diagnostics. In particular, there is no natural, or selectable time scale for ‘recent infection’ which a recency test is then aimed at detecting. The case definition for recent infection is, then, essentially defined arbitrarily. Of course it would be nonsensical (and statistically uninformative) if the case definition were not something usually exhibited by newly infected individuals, and very rarely exhibited by people infected for substantial periods like several years.
 * The framework of Kassanjee et al provides an estimate for a (time) weighted average value of incidence over a period preceding a cross sectional survey in which HIV and recent infection are ascertained. Time weighting is also intrinsic to cohort studies, as the effective cohort size varies over the stages of recruitment, maintenance, and completion of follow up. The time averaging implied, when one considers any study design, including cohorts, often turns out to have complex details that are difficult or impossible to determine. In the case of the Kassanjee framework, the sensible heuristic is that the expectation value of the estimator should be understood to be the uniformly weighted incidence over a period of one MDRI preceding the survey
 * Users of the present tool may decide, given inter-survey intervals and other considerations, whether they choose to assign the prevalence and incidence estimates to the same time point. The first order correction to this would be to assign the incidence estimates a time of one half MDRI before the prevalence estimate from the same survey. For most applications, this is probably not important to account explicitly.
 * the original paper in Epidemiology introduces 8 sources of ‘higher order corrections’ beyond the leading order which is captured in the nominal Kassanjee estimator. Most of these are very minor and not worth further analysis. The one point worthy of some attention is that the usual form of the estimator assumes that the underlying susceptible population is constant. In a cohort, the susceptible population is always decreasing, and it is doing so precisely due to infections accruing, and perhaps loss to follow up. In an open population which is surveyed in a major household survey, it is not obvious whether the susceptible population is in fact increasing or decreasing, as there may be non-trivial migration or ‘aging in’ and ‘aging out’ contributions, in addition to the incidence itself. Some published forms of an estimator to handle recent infection data appear to have adopted a view aligned closely to the cohort situation. These details are all of the flavour of how to optimally handle the estimation of exposure time in a cohort in which follow up is infrequent, and assumptions must be made about the distribution of infection events. This is very much a fine point, however, as the main source of statistical uncertainty arises from the random *number of* infection events, and the details of timing, and consequences for exposure time, are secondary.
@@ -91,7 +91,7 @@ In the app, there is provision for users to provide scale factors adjusting the 
 
 It should be noted that:
 
-*	Design Effects are mainly useful as heuristic estimates to be used when a survey is being designed (i.e. in calculations of power, sample size, etc). Once survey data is in hand, it makes more sense to analyse it by suitably adapted standard methods, to yield estimates, and a variance/covariance matrix which do not specifically contain a reference to a sample size, and hence do not require a design effect adjustment. Hence, @the app@ does not provide access to underlying inctools uses of design effects. 
+*	Design Effects are mainly useful as heuristic estimates to be used when a survey is being designed (i.e. in calculations of power, sample size, etc). Once survey data is in hand, it makes more sense to analyse it by suitably adapted standard methods, to yield estimates, and a variance/covariance matrix which do not specifically contain a reference to a sample size, and hence do not require a design effect adjustment. Hence, @the app@ does not provide access to underlying inctools uses of design effects.
 *	There is no clear consensus on approach, and there are no mature tools, for estimating the design effect parameters for population based HIV surveys.
 *	The two design effects are logically independent parameters, which capture the effects of two logically independent processes (ascertaining HIV, and ascertain recent infection amongst HIV positive subjects).
 *	It is not appropriate to use design effects to scale the variances of the test property (MDRI and FRR) estimates, as these are not estimated in the incidence survey, but rather arise in the recency test development process.
@@ -99,7 +99,3 @@ It should be noted that:
 ## Citation
 
 @The App@, and this supporting documentation, extensively use/recycle material from the R package *inctools*, in line with, and hence further under the aegis of a creative commons licence. This in turn implies the use of the methodology derived in: Kassanjee R, McWalter TA, Bärnighausen T, Welte A. A new general biomarker-based incidence estimator. Epidemiology. 2012; 23(5): 721-728. Some features implemented in *inctools* are currently not published outside the package contents, including technical details documented in the package vignettes, partially recycled here.
-
-
-
-
