--- a/incidence_calculator/www/WorkedExample.Rmd
+++ b/incidence_calculator/www/WorkedExample.Rmd
@@ -8,21 +8,21 @@ A cross sectional survey leads to a core dataset with typical (germaine to the p
 * Primary sampling unit (cluster ID)
 * Weight (based on estimates of demographic/geographic structure)
 * Stratum (an ID indicating strata such as age, rage, (rural/urban) settlement type,.. )
+* Sex/Gender (no need to settle heated debates here - M/F will do)
 * HIV status (0/1 for -/+ respectively)
 * Recency Status (0/1 for Non-recent/Recent respectively)
 
-The example data set provided is here @URL@. It has the specific (required) column names in CSV form:
+The example data set provided is here @URL@. It has the specific column names corresponding to these, in CSV form:
 * SID
 * PSU
 * W
 * S
+* G
 * H
 * R
 (Null values are recorded as consecutive commas ??)
 
-(note that sex/race/age may form part of the weighting algorithm, only the final weights are used in the analysis, so they need not – indeed cannot be - uploaded) 
-
-(possibly redundant) This will usually be processed by somewhat ad-hoc means, generalizable for certain standard sampling frame types.
+This will usually be processed by somewhat ad-hoc means, generalizable for certain standard sampling frame types.
 
 
 To facilitate a (hopefully preliminary) 'naive' analysis, @the app@ has a ‘Counts based estimate’ box (on what tab?), which takes (or looks up from an uploaded data set) survey counts, and hence produces prevalence estimates (for both HIV and recent infection, including variances) under the simplifying assumption of individual level random selection of subjects from a single population group.
@@ -48,25 +48,25 @@ In order to accommodate arbitrarily sophisticated analysis of complex survey dat
 *	an estimate of the prevalence of ‘recent infection’ amongst those who are HIV positive.
 *	A variance/covariance matrix for these two prevalence estimates
 
-While @the app@ has no firm requirements about how these estimates are to be obtained, they need to be provided in the specified form, or calculated internally. 
+While @the app@ has no firm requirements about how these estimates are to be obtained, they need to be provided in the specified form, either by hand into the interface, or by uploading a file - by which it is possible to provide estimates from multiple surveys in one transaction of the calculator.
 
-The R package *inctools* lists the R package *survey* in its dependencies, thereby providing access to at least one robust flexible tool to facilitate the estimation of the relevant sample proportions from structured survey data. @The app@ in turn supports a useful generic implementation of functionality of the *survey* package, which enables users to upload a full individual level data set obtained from a structured/complex sampling frame. 
+From the same underlying data set that generated the counts just used above, we obtained
+*	an estimate of HIV prevalence
+*	an estimate of the prevalence of ‘recent infection’ amongst those who are HIV positive.
+*	A variance/covariance matrix for these two prevalence estimates
 
-(Do we first explain here, or earlier, how to upload a data set?)
-
-(possibly redundant:)The abovementioned *HIV* and *Recency* prevalences and their covariance can then be calculated internally rather than supplied by hand into the interface.
-
-The result of @a call to survey triggered by refresh/button@ this calculation is
-
-* An HIV prevalence of 20% estimated with a relative standard error of 2.8%
-* An estimated prevalence of recent infection, amongst HIV positives, of 10%, with a relative standard error of 9%
-
-As already noted, this can either be 1) generated within the app as just described, if a full data set conforming to the requirements is uploaded, or 2) provided as inputs to @the app@ in fields within the ‘prevalences box.
+which are entered into , ...
 
 Using primarily the *inctools* Function `incprops`, @the app@ will report:
 
-* the (possibly user provided) HIV Prevalence, CI and (relative)standard error
+* the (user provided) HIV Prevalence, CI and (relative) standard error
 * an incidence point estimate, confidence interval, and (relative) standard error
-* the correlation/covariance of HIV Prevalence and Incidence (including an approximate CI)
 * the equivalent annualised risk of infection (which is usually numerically very similar)
-* implied confidence intervals on MDRI and FRR derived from input parameters
+* the correlation/covariance of HIV Prevalence and Incidence (including an approximate CI ?? REALLY ??)
+* implied confidence intervals on MDRI and FRR derived from input parameters (PEs and RSEs)
+
+
+
+## Key App features
+
+### 
